--- a/app/globals.css
+++ b/app/globals.css
@@ -31,5 +31,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
+  font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
