--- a/app/globals.css
+++ b/app/globals.css
@@ -9,19 +9,19 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --foreground: #171717;
-  --background: #ededed;
+  /* --foreground: #171717; */
+  /* --background: #ededed; */
   font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
 
 .dark {
-  --foreground: #ededed;
-  --background: #171717;
+  /* --foreground: #ededed; */
+  /* --background: #0e1012; */
 }
 
 @theme inline {
-  --color-foreground: var(--foreground);
-  --color-background: var(--background);
+  /* --color-foreground: var(--foreground);
+  --color-background: var(--background); */
   --color-brandPurp: #8e44adff;
 }
 
